# app/Http/Controllers/BookController.php
@@ -11,11 +11,81 @@ class BookController extends Controller {
 
     use ApiResponse;
 
+
+    /**
+     * @OA\Get(
+     *     path="/api/v1/book/",
+     *     description="Get all books",
+     *     tags={"Books"},
+     *     @OA\Response(
+     *         response=201,
+     *         description="OK",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *                   @OA\Schema(
+     *                         @OA\Property(property="success", type="boolean", example=true),
+     *                         @OA\Property(property="message", type="string", example="OK"),
+     *                         @OA\Property(property="data", type="array", @OA\Items(ref="#/components/schemas/Book")),
+     *                   ),
+     *              ),
+     *         },
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthorized.",
+     *     ),
+     *      @OA\Response(
+     *         response="404",
+     *         description="Not found",
+     *     ),
+     *     @OA\SecurityScheme(
+     *         scheme="bearerAuth",
+     *     ),
+     * )
+     */
     public function getAll(Request $req) {
         $books = Book::all();
         return $this->sendResponse($books, 'OK', 200);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/v1/book/{id}",
+     *     description="Get one book",
+     *     tags={"Books"},
+     *     @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         content={
+     *             @OA\MediaType(
+     *                 mediaType="application/json",
+     *                   @OA\Schema(
+     *                         @OA\Property(property="success", type="boolean", example=true),
+     *                         @OA\Property(property="message", type="string", example="OK"),
+     *                         @OA\Property(property="data", ref="#/components/schemas/Book"),
+     *                   ),
+     *              ),
+     *         },
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthorized.",
+     *     ),
+     *      @OA\Response(
+     *         response="404",
+     *         description="Not found",
+     *     ),
+     *     @OA\SecurityScheme(
+     *         scheme="bearerAuth",
+     *     ),
+     * )
+     */
     public function get($id, Request $req) {
         $book = Book::find($id);
         if($book == null)
@@ -23,6 +93,34 @@ class BookController extends Controller {
         return $this->sendResponse($book, 'OK', 200);
     }
 
+    /**
+     * @OA\Post(
+     *     path="/api/v1/book/",
+     *     description="Create a new book",
+     *     tags={"Books"},
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="name",
+     *         required=true,
+     *     ),
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="contents",
+     *         required=true,
+     *     ),
+     *     @OA\Response(
+     *         response=201,
+     *         description="Created",
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthorized.",
+     *     ),
+     *     @OA\SecurityScheme(
+     *         scheme="bearerAuth",
+     *     ),
+     * )
+     */
     public function create(Request $req) {
         $book = new Book();
         $book->name = $req->input('name');
@@ -30,9 +128,32 @@ class BookController extends Controller {
 
         $book->save();
 
-        return $this->sendResponse($book, 'OK', 200);
+        return $this->sendResponse($book, 'Created', 201);
     }
 
+    /**
+     * @OA\Delete (
+     *     path="/api/v1/book/",
+     *     description="Delete a book",
+     *     tags={"Books"},
+     *     @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthorized.",
+     *     ),
+     *     @OA\SecurityScheme(
+     *         scheme="bearerAuth",
+     *     ),
+     * )
+     */
     public function delete($id, Request $req) {
         $book = Book::find($id);
         if($book == null)
@@ -41,6 +162,52 @@ class BookController extends Controller {
         return $this->sendEmptyResponse('OK', 200);
     }
 
+    /**
+     * @OA\Put(
+     *     path="/api/v1/book/",
+     *     description="Edit a book",
+     *     tags={"Books"},
+     *     @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *     ),
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="name",
+     *         required=false,
+     *     ),
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="contents",
+     *         required=false,
+     *     ),
+     *     @OA\Parameter(
+     *         in="query",
+     *         name="status",
+     *         required=false,
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *     ),
+     *     @OA\Response(
+     *         response="400",
+     *         description="Bad request",
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthorized.",
+     *     ),
+     *      @OA\Response(
+     *         response="404",
+     *         description="Not found",
+     *     ),
+     *     @OA\SecurityScheme(
+     *         scheme="bearerAuth",
+     *     ),
+     * )
+     */
     public function edit($id, Request $req) {
         $book = Book::find($id);
         if($book == null)
