# app/Http/Controllers/BookStatusController.php
@@ -10,30 +10,39 @@ class BookStatusController extends Controller {
 
     use ApiResponse;
 
-    /**
-     * @OA\Get(
-     *     path="/bookStatuses/",
-     *     description="Get list of all statuses",
-     *     tags={"Statuses"},
-     *     @OA\Response(
-     *         response=200,
-     *         description="OK",
-     *         @OA\JsonContent(
-     *             type="array",
-     *             @OA\Items(ref="#/components/schemas/BookStatus")
-     *         ),
-     *     ),
-     *     @OA\Response(
-     *         response="401",
-     *         description="Unauthorized.",
-     *     ),
-     * )
-     */
+
+//*         @OA\JsonContent(
+//*             type="array",
+//*             @OA\Items(ref="#/components/schemas/BookStatus")
+//*         ),
     public function getAll(Request $req) {
         $statuses = BookStatus::all();
         return $this->sendResponse($statuses, 'OK', 200);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/v1/bookStatuses/",
+     *     description="Get list or one status",
+     *     tags={"Statuses"},
+     *     @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=false,
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthorized.",
+     *     ),
+     *     @OA\SecurityScheme(
+     *         scheme="bearerAuth",
+     *     ),
+     * )
+     */
     public function get($id, Request $req) {
         $status = BookStatus::find($id);
         if($status == null)
